2003-03-26  Don Porter  <dgp@users.sourceforge.net>
  
	* doc/tcltest.n:
	* library/tcltest/tcltest.tcl:  Added reporting during
	[configure -debug 1] operations to warn about multiple uses of
	the same test name.  [FR 576693]  Replaced [regexp] and [regsub]
	with [string map] where possible.  Thanks to David Welton.
	[Bugs 667456,667558]
        * library/tcltest/pkgIndex.tcl: Bumped to tcltest 2.2.3

	* tests/msgcat.test (msgcat-2.2.1): changed test name to avoid
	duplication.  [Bug 710356]

  	* unix/dltest/pkg?.c:  Changed all Tcl_InitStubs calls to pass
  	argument exact = 0, so that rebuilds are not required when Tcl
  	bumps to a new version.  [Bug 701926]

2003-03-24  Miguel Sofer <msofer@users.sf.net>

	* generic/tclVar.c:
	* tests/var.test: fixing ObjMakeUpvar's lookup algorithm for the
	created local variable, bugs #631741 (Chris Darroch) and #696893
	(David Hilker). 

2003-03-22  Kevin Kenny  <kennykb@acm.org>

	* library/dde/pkgIndex.tcl:
	* library/reg/pkgIndex.tcl: Fixed a bug where [package require dde]
	or [package require registry] attempted to load the release version
	of the DLL into a debug build. [Bug 708218] Thanks to Joe Mistachkin
	for the patch.
	* win/makefile.vc: Added quoting around the script name in the
	'test' target; Joe Mistachkin insists that he has a configuration
	that fails to launch tcltest without it, and it appears harmless 
	otherwise.
	
2003-03-20  Don Porter  <dgp@users.sourceforge.net>

        * generic/tclInt.h (tclOriginalNotifier):
        * generic/tclStubInit.c (tclOriginalNotifier):
        * mac/tclMacNotify.c (Tcl_SetTimer,Tcl_WaitForEvent):
        * unix/tclUnixNotfy.c (Tcl_SetTimer,Tcl_WaitForEvent,
                Tcl_CreateFileHandler,Tcl_DeleteFileHandler):
        * win/tclWinNotify.c (Tcl_SetTimer,Tcl_WaitForEvent):  Some linkers
        apparently use a different representation for a pointer to a function
        within the same compilation unit and a pointer to a function in a